--- a/scss/style.scss
+++ b/scss/style.scss
@@ -10,10 +10,11 @@ $dark-black:#353535;
 $white: #ffffff;
 $gray: #efefef;
 
+$blue: #0000ff;
+$red: #ff0000;
 $base-green: #f7fff0;
 $green: #3CB371;
 $light-green:#3cdcca;
-
 $orange: #fe8224;
 $light-orange:#FFBD26;
 
