--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -1,5 +1,15 @@
 @charset "UTF-8";
 
+.title{
+  margin: 0 auto;
+  text-align: center;
+}
+.show_year_month{
+  width: 20%;
+  margin: 0 auto;
+  text-align: center;
+  border: 1px $dark-black solid;
+}
 .calendar_table{
   width: 20%;
   min-width: 300px;
