--- a/scss/style.scss
+++ b/scss/style.scss
@@ -5,18 +5,16 @@
 // ------------------------
 
 // 色
-$black: #696969;
-$dark-black:#353535;
+$black: #353535;
+$dark-black:#000000;
 $white: #ffffff;
 $gray: #efefef;
 
 $blue: #0000ff;
 $red: #ff0000;
 $base-green: #f7fff0;
-$green: #3CB371;
-$light-green:#3cdcca;
+$green: #008000;
 $orange: #fe8224;
-$light-orange:#FFBD26;
 
 
 //最大幅
