--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 @import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro);
 html, body {
   font-family: 'Source Sans Pro', sans-serif;
@@ -29,19 +28,15 @@ table {
   border-spacing: 0;
   overflow: hidden; }
 
-.title {
-  margin: 10px auto;
-  text-align: center; }
-
 .show_year_month {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
   max-width: 300px;
-  margin: 0 auto 10px;
+  margin: 10px auto;
   padding: 5px 15px;
-  border: 3px #008000 solid;
+  border: 2px #008000 solid;
   border-radius: 3px;
   background-color: #f7fff0; }
   .show_year_month span {
@@ -71,32 +66,32 @@ table {
     padding: 0;
     font-size: 22px;
     border: 1px #000000 solid; }
-    .calendar_table td .modal_memo {
+    .calendar_table td .modal_btn {
       display: table;
       width: 100%;
       height: 100%;
       margin: 0;
       color: #353535; }
-      .calendar_table td .modal_memo:hover {
+      .calendar_table td .modal_btn:hover {
         background-color: rgba(254, 130, 36, 0.3); }
-      .calendar_table td .modal_memo span {
+      .calendar_table td .modal_btn span {
         display: table-cell;
         vertical-align: middle;
         text-align: center; }
-      .calendar_table td .modal_memo .now_day {
+      .calendar_table td .modal_btn .now_day {
         border: 1.5px #008000 dotted;
         border-radius: 50%; }
     .calendar_table td:first-child {
       background-color: rgba(255, 0, 0, 0.7); }
-      .calendar_table td:first-child .modal_memo {
+      .calendar_table td:first-child .modal_btn {
         color: #ffffff; }
-        .calendar_table td:first-child .modal_memo:hover {
+        .calendar_table td:first-child .modal_btn:hover {
           background-color: rgba(0, 0, 255, 0.3); }
     .calendar_table td:last-child {
       background-color: rgba(0, 0, 255, 0.7); }
-      .calendar_table td:last-child .modal_memo {
+      .calendar_table td:last-child .modal_btn {
         color: #ffffff; }
-        .calendar_table td:last-child .modal_memo:hover {
+        .calendar_table td:last-child .modal_btn:hover {
           background-color: rgba(255, 0, 0, 0.3); }
 
 .todate_box {
@@ -109,25 +104,86 @@ table {
   font-weight: bold;
   background-color: rgba(254, 130, 36, 0.5); }
 
-#modal_main {
+.modal {
   display: none;
-  　width: 300px;
-  　height: 300px;
-  　margin: 0;
-  　padding: 0;
-  　background-color: #008000;
-  　color: #ff0000;
-  　position: fixed;
-  　z-index: 100; }
+  position: absolute;
+  top: 25%;
+  left: 0;
+  right: 0;
+  max-width: 300px;
+  margin: 0 auto;
+  padding: 30px;
+  background: #ffffff;
+  border-radius: 5px;
+  box-shadow: 5px 5px 10px rgba(53, 53, 53, 0.3); }
 
-.modal_bg {
-  　display: none;
-  　width: 100%;
-  　height: 100%;
-  　background-color: rgba(53, 53, 53, 0.8);
-  　position: fixed;
-  　top: 0;
-  　left: 0;
-  　z-index: 50; }
+.modal_date {
+  display: block; }
+
+.modal_text {
+  width: 290px;
+  max-width: 290px;
+  height: 200px; }
+
+.close_btn {
+  display: inline-block;
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 40px;
+  height: 40px;
+  margin: 0;
+  padding: 0;
+  border: none;
+  background-color: #008000;
+  border-radius: 50%;
+  transform: scale(0.5);
+  cursor: pointer; }
+
+.close_btn:before {
+  content: "";
+  display: inline-block;
+  position: absolute;
+  top: 7px;
+  left: 17px;
+  width: 6px;
+  height: 24px;
+  margin: 0;
+  padding: 0;
+  border: none;
+  background-color: #ffffff;
+  transform: rotate(45deg);
+  -moz-transform: rotate(45deg);
+  -webkit-transform: rotate(45deg); }
+
+.close_btn:after {
+  content: "";
+  display: inline-block;
+  position: absolute;
+  top: 7px;
+  left: 17px;
+  width: 6px;
+  height: 24px;
+  margin: 0;
+  padding: 0;
+  border: none;
+  background-color: #ffffff;
+  transform: rotate(-45deg);
+  -moz-transform: rotate(-45deg);
+  -webkit-transform: rotate(-45deg); }
+
+.close_btn:hover {
+  background-color: #fe8224; }
+
+.overlay {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(53, 53, 53, 0.3); }
 
 /*# sourceMappingURL=style.css.map */
