--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -1,18 +1,14 @@
 @charset "UTF-8";
 
-.title{
-  margin: 10px auto;
-  text-align: center;
-}
-
+//表示中の年・月、次月と前月移動のリンク
 .show_year_month{
   @include flex;
   justify-content: space-between;
   align-items: center;
   max-width: 300px;
-  margin: 0 auto 10px;
+  margin: 10px auto;
   padding: 5px 15px;
-  border: 3px $green solid;
+  border: 2px $green solid;
   border-radius: 3px;
   background-color: $base-green;
   span{
@@ -25,6 +21,7 @@
   }
 }
 
+//カレンダー本体
 .calendar_table{
   width: 20%;
   height: 350px;
@@ -33,6 +30,8 @@
   text-align: center;
   border: 1px $dark-black solid;
   border-radius: 2px 2px 2px 2px;
+
+  //日～土曜日までの固定見出し
   th{
     font-size: 24px;
     border: 1px $dark-black solid;
@@ -43,12 +42,14 @@
       color: $blue;
     }
   }
+
+  //日付部分
   td{
     text-align: center;
     padding: 0;
     font-size: 22px;
     border: 1px $dark-black solid;
-    .modal_memo{
+    .modal_btn{
       display: table;
       width: 100%;
       height: 100%;
@@ -69,7 +70,7 @@
     }
     &:first-child{
       background-color: rgba($red,0.7);
-      .modal_memo{
+      .modal_btn{
         color: $white;
         &:hover{
           background-color: rgba($blue, 0.3);
@@ -78,7 +79,7 @@
     }
     &:last-child{
       background-color: rgba($blue,0.7);
-      .modal_memo{
+      .modal_btn{
         color: $white;
         &:hover{
           background-color: rgba($red, 0.3);
@@ -88,6 +89,7 @@
   }
 }
 
+//JSで出力した今日の日付部分
 .todate_box{
   text-align: center;
   margin: 10px auto;
@@ -99,26 +101,89 @@
   background-color: rgba($orange, 0.5);
 }
 
-//モーダル
-#modal_main {
+//モーダルメモ部分
+.modal {
   display: none;
-　width: 300px;
-　height: 300px;
-　margin: 0;
-　padding: 0;
-　background-color: $green;
-　color: $red;
-　position: fixed;
-　z-index: 100;
+  position: absolute;
+  top: 25%;
+  left: 0;
+  right: 0;
+  max-width: 300px;
+  margin: 0 auto;
+  padding: 30px;
+  background: $white;
+  border-radius: 5px;
+  box-shadow: 5px 5px 10px rgba($black,0.3);
 }
-//モーダル背景
-.modal_bg {
-　display: none;
-　width: 100%;
-　height: 100%;
-　background-color: rgba($black, 0.8);
-　position: fixed;
-　top: 0;
-　left: 0;
-　z-index: 50;
+.modal_date{
+  display: block;
+}
+.modal_text{
+  width: 290px;
+  max-width: 290px;
+  height: 200px;
+}
+//モーダル内の閉じるボタン
+.close_btn{
+  display: inline-block;
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 40px;
+  height: 40px;
+  margin: 0;
+  padding: 0;
+  border: none;
+  background-color: $green;
+  border-radius: 50%;
+  transform: scale(0.5);
+  cursor: pointer;
+}
+.close_btn:before{
+  content: "";
+  display: inline-block;
+  position: absolute;
+  top: 7px;
+  left: 17px;
+  width: 6px;
+  height: 24px;
+  margin: 0;
+  padding: 0;
+  border: none;
+  background-color: $white;
+  transform: rotate(45deg);
+  -moz-transform: rotate(45deg);
+  -webkit-transform: rotate(45deg);
+}
+.close_btn:after{
+  content: "";
+  display: inline-block;
+  position: absolute;
+  top: 7px;
+  left: 17px;
+  width: 6px;
+  height: 24px;
+  margin: 0;
+  padding: 0;
+  border: none;
+  background-color: $white;
+  transform: rotate(-45deg);
+  -moz-transform: rotate(-45deg);
+  -webkit-transform: rotate(-45deg);
+}
+.close_btn:hover{
+  background-color: $orange;
+}
+
+//モーダルのオーバーレイ（黒背景）
+.overlay {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba($black,0.3);
 }
