--- a/scss/style.scss
+++ b/scss/style.scss
@@ -8,13 +8,12 @@
 $black: #353535;
 $dark-black:#000000;
 $white: #ffffff;
-$gray: #efefef;
 
 $blue: #0000ff;
 $red: #ff0000;
 $base-green: #f7fff0;
 $green: #008000;
-$orange: #fe8224;
+$orange: #ffa500;
 
 
 //最大幅
