--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -46,7 +46,7 @@
   //日付部分
   td{
     text-align: center;
-    padding: 0;
+    padding: 6px 2px;
     font-size: 22px;
     border: 1px $dark-black solid;
     .modal_btn{
@@ -64,7 +64,7 @@
         text-align: center;
       }
       .now_day{
-        border: 1.5px $green dotted;
+        border: 1.5px $green solid;
         border-radius: 50%;
       }
     }
@@ -108,19 +108,20 @@
   top: 25%;
   left: 0;
   right: 0;
-  max-width: 300px;
+  max-width: 270px;
   margin: 0 auto;
-  padding: 30px;
+  padding: 20px;
   background: $white;
   border-radius: 5px;
   box-shadow: 5px 5px 10px rgba($black,0.3);
+  z-index: 10;
 }
 .modal_date{
   display: block;
 }
 .modal_text{
-  width: 290px;
-  max-width: 290px;
+  width: 260px;
+  max-width: 260px;
   height: 200px;
 }
 //モーダル内の閉じるボタン
@@ -174,7 +175,14 @@
 .close_btn:hover{
   background-color: $orange;
 }
-
+//保存・削除ボタン
+.btn_box{
+  @include flex;
+  justify-content: space-around;
+  align-items: center;
+  width: 150px;
+  margin: 0 auto;
+}
 //モーダルのオーバーレイ（黒背景）
 .overlay {
   display: none;
@@ -186,4 +194,5 @@
   width: 100%;
   height: 100%;
   background-color: rgba($black,0.3);
+  z-index: 5;
 }
